--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ form input, form button{
     outline: none;
 }
 
+form input{
+    min-width: 30vw;
+}
+
 form button{
     color: #2e8690;
     cursor: pointer;
